--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
     "react-day-picker": "^9.8.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.1.2",
@@ -45,6 +47,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.37.0",
     "vite": "^7.0.5",
-    "vite-plugin-singlefile": "^2.3.0"
+    "vite-plugin-pwa": "^1.1.0",
+    "vite-plugin-singlefile": "^2.3.0",
+    "workbox-window": "^7.3.0"
   }
 }
