--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
     "react": "^19.1.0",
@@ -27,6 +28,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
     "react-slick": "^0.31.0",
     "recharts": "^3.1.2",
