--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.55.0",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react-slick": "^0.23.13",
     "class-variance-authority": "^0.7.1",
@@ -30,6 +31,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
+    "react-router-dom": "^6.28.0",
     "react-slick": "^0.31.0",
     "recharts": "^3.1.2",
     "slick-carousel": "^1.8.1",
