--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/togeojson": "^0.16.2",
     "@tailwindcss/vite": "^4.1.11",
     "@types/react-slick": "^0.23.13",
+    "@xmldom/xmldom": "^0.8.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -20,6 +22,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
+    "mapbox-gl": "^3.16.0",
     "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.2",
@@ -36,10 +39,13 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "vaul": "^1.1.2"
+    "togeojson": "^0.16.0",
+    "vaul": "^1.1.2",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
